  *   update CACA output due to changes in xine-lib
  * Various memleak and memory access fixes, for example:
  *   skin downloader crash
  *   cleaner destroy of the widgets in xine toolkit ("kamikaze patch")
  *   proper free after strsep()
  *   opening multiple times TV settings window
  * Fixed string encoding conversion, closes xine bug #14.
  * Fixed loading of playlist containing relative paths, closes xine bug #52.
  * Fixed possible integer overflow when parsing PNG files in skins, closes
    xine bug #153.
  * Lock display on exit, xine bug #193.

xine-ui (0.99.5) unstable; urgency=low

  * Fixes and enhancements ...
  * Updated language translations. Thanks to all translators
  * Handle audio amp level event. Thanks to Reinhard Nissl
  * Stdctl extensions: New command "OSDWriteText" added to display arbitrary
    text on OSD, any stdctl command can now be coded to take a numeric or
    string parameter; closes feature request #1635452. Thanks to Richard van Paasen
  * Further VDR keys added. Thanks to Reinhard Nissl
  * Fixed segfaults when appending files to playlist, current play not interrupted
    when appending files to playlist, only file name displayed in playlist dialog
    to better fit into the dialog box. Thanks to Michael Hughes for this patch
  * Harmonized appearance of non-skinned windows with more space
  * Shortcut keys unused in a particular window work transparent now,
    i.e. as configured by their key bindings
  * Added missing ESC key shortcut for exit in some windows
  * Typing corrections
  * Fixed side effects from key presses in event receiver window of key bindings editor
  * Fixed image clip/redraw problems in skin download preview
  * Fixed segfault upon trying to open skin download window when it's already open
  * Fixed timing dependent window redrawing failures
  * Fixed crash upon missing opacity lock atom for video window [bug #1573056]