@@ -52,7 +52,8 @@ xine-ui (0.99.6) unstable; urgency=low
   *   proper free after strsep()
   *   opening multiple times TV settings window
   * Fixed string encoding conversion, closes xine bug #14.
-  * Fixed loading of playlist containing relative paths, closes xine bug #52.
+  * Fixed loading of playlist containing relative paths, closes xine bug #52,
+    save old playlist with absolute paths on exit.
   * Fixed possible integer overflow when parsing PNG files in skins, closes
     xine bug #153.
   * Lock display on exit, xine bug #193.
